[package]
name = "granne"
version = "0.2.2"
edition = "2024"

[patch.crates-io]
anndists = { git = "https://github.com/clairewowo/anndists" }

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
bytemuck = { version = "1", features = ["derive"] }
memmap2 = "0.9"
rand = "0.8"
needletail = "0.6"
num = "0.4"
num_cpus = "1.16"
num-traits = "0.2.19"

# kmerutils = { version = "0.0.14", features = ["stdsimd"]}
kmerutils = { path="../kmerutils", features = ["stdsimd"] }
anndists = { git = "https://github.com/clairewowo/anndists", features = ["stdsimd"] }
# anndists = { git = "https://github.com/jianshu93/anndists", features = ["stdsimd"] }
xxhash-rust = { version = "0.8", features = [ "std", "xxh3" ] }
## rust-diskann = { git = "https://github.com/jianshu93/rust-diskann" }
rust-diskann = "0.3.0"
probminhash =  {git = "https://github.com/jianshu93/probminhash"}